Stopped skills overflowing

--- a/style.css
+++ b/style.css
@@ -220,7 +220,6 @@ ul a:hover {
   background-color: hsl(4, 85%, 80%);
   border-radius: 5%;
   margin: 0 auto 10px auto;
-  width: 15%;
 }
 
 .skills-list ul {
